--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,34 @@
 ### General
 *.orig
 *.~
-/.idea
-*.iml
-.sass-cache
 .DS_Store
 ENABLE_INSTALL_TOOL
 FIRST_INSTALL
 
 ### Typo3 template
 # Ignore several upload and file directories.
-/htdocs/fileadmin/user_upload/
-/htdocs/fileadmin/_temp_/
-/htdocs/fileadmin/_processed_/
-/htdocs/uploads/
+/public/fileadmin/user_upload/
+/public/fileadmin/_temp_/
+/public/fileadmin/_processed_/
+/public/uploads/
 
 # Ignore cache.
-/htdocs/typo3conf/temp_CACHED*
-/htdocs/typo3conf/temp_fieldInfo.php
-/htdocs/typo3conf/deprecation_*.log
+/public/typo3conf/temp_CACHED*
+/public/typo3conf/temp_fieldInfo.php
+/public/typo3conf/deprecation_*.log
 
 # Ignore system folders, you should have them symlinked.
-/htdocs/typo3
-/htdocs/typo3_src
-/htdocs/typo3_src-*
-/htdocs/index.php
+/public/typo3
+/public/typo3_src
+/public/typo3_src-*
+/public/index.php
 
 # Ignore temp directory.
-/htdocs/typo3temp/
+/public/typo3temp/
 
 # Ignore typo3 extensions installed with composer.
-/htdocs/typo3conf/ext/realurl/
-/htdocs/typo3conf/ext/vhs/
+/public/typo3conf/ext/realurl/
+/public/typo3conf/ext/vhs/
 
 ### Composer template
 composer.phar
@@ -39,4 +36,3 @@ composer.phar
 
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
