--- a/public/fileadmin/Resources/Public/JavaScripts/package.json
+++ b/public/fileadmin/Resources/Public/JavaScripts/package.json
@@ -5,9 +5,9 @@
   "description": "typo3 demo project",
   "dependencies": {
     "google-closure-library": "v20161024.0.0",
-    "clulib": "^1.0.0",
-    "fx-layout": "^1.0.0",
-    "externs": "^1.0.0",
+    "clulib": "1.0.0",
+    "fx-layout": "1.0.0",
+    "externs": "1.0.0",
     "swiper": "3.4.1",
     "systemjs": "0.19.41"
   }
