add manifest name

--- a/public/fileadmin/Resources/Public/AppConfig/manifest.json
+++ b/public/fileadmin/Resources/Public/AppConfig/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "Typo3 Demo",
   "icons": [
     {
       "src": "fileadmin/Resources/Public/Images/Favicon/android-chrome-192x192.png",
