--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     }
   ],
   "require": {
-    "typo3/cms": "^7.6",
-    "dmitryd/typo3-realurl": "^2.0",
-    "fluidtypo3/vhs": "^2.4"
+    "typo3/cms": "~8.4.0",
+    "dmitryd/typo3-realurl": "~2.1.0",
+    "fluidtypo3/vhs": "~3.1.0"
   },
   "autoload": {
     "psr-4": {
