--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   "require": {
     "typo3/cms": "~8.4.0",
     "dmitryd/typo3-realurl": "~2.1.0",
-    "fluidtypo3/vhs": "~3.1.0"
+    "fluidtypo3/vhs": "~3.1.0",
+    "b-strauss/engine": "~1.0.0"
   },
   "autoload": {
     "psr-4": {
