--- a/public/fileadmin/Resources/Public/JavaScripts/package.json
+++ b/public/fileadmin/Resources/Public/JavaScripts/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "description": "typo3 demo project",
   "dependencies": {
-    "google-closure-library": "v20161024.0.0",
     "clulib": "1.0.2",
     "externs": "1.0.0",
     "swiper": "3.4.1",
-    "systemjs": "0.19.41"
+    "systemjs": "0.19.41",
+    "google-closure-library": "v20161024.0.0",
+    "google-closure-compiler": "20161024.2.0",
+    "gulp": "~3.9.1",
+    "gulp-sourcemaps": "~2.4.0"
   }
 }
