--- a/public/.htaccess
+++ b/public/.htaccess
@@ -233,6 +233,8 @@ AddEncoding gzip .gzip
   # https://httpd.apache.org/docs/current/mod/mod_filter.html#addoutputfilterbytype
   <IfModule mod_filter.c>
     AddOutputFilterByType DEFLATE "application/atom+xml" \
+                                  "application/font-woff" \
+                                  "application/font-woff2" \
                                   "application/javascript" \
                                   "application/json" \
                                   "application/ld+json" \
